<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="acquiring_packages">Acquiring packages</string>
	<string name="app_name">WakeBlock</string>
	<string name="arm_device">ARM DEVICE</string>
	<string name="arm64_device">ARM64 DEVICE</string>
	<string name="autodownloader_unsupported">AUTO-DOWNLOADER UNSUPPORTED DEVICE, ROM OR VERSION</string>
	<string name="autopatcher_running">Auto-Patcher is running…</string>
	<string name="backup_error">Backup Error!</string>
	<string name="block">Block</string>
	<string name="block_time">Block time</string>
	<string name="bbwakelock">Backup WakeLocks</string>
	<string name="brmenu">Backup &amp; Restore</string>
	<string name="cancel">Cancel</string>
	<string name="check_for_new_core_mod">CHECK FOR NEW CORE MOD</string>
	<string name="choice_cancel">Operation Aborted</string>
	<string name="choice_error">Whops, wrong button.</string>
	<string name="choice_error_temp">Sorry, we still have to implement the Magisk Module!</string>
	<string name="choice_magisk">Create Magisk Module</string>
	<string name="choice_magisk_old">I really like Magisk!</string>
	<string name="choice_noreboot">Manual Flash</string>
	<string name="choice_noreboot_old">I want to deal with things myself!</string>
	<string name="choice_noreboot_info">You can find the zip file in /sdcard/WakeBlock!</string>
	<string name="choice_positive">I won\'t blame you if everything explodes.</string>
	<string name="choice_negative">Oh. Well, i\'ll wait then.</string>
	<string name="choice_title">What should i do?</string>
	<string name="choice_reboot">Automatic Flash</string>
	<string name="choice_reboot_old">Create the zip and flash it, right away!</string>
	<string name="choice_warning"> !~ WARNING ~! </string>
	<string name="choice_warning_message">We detected that your battery is lower than 50%. The patching process needs quite a bit of resources and it could take up to 30 minutes. We highly suggest that you plug in your device to the AC power before patching! But anyway, the choice is yours: </string>
	<string name="confirm">Confirm</string>
	<string name="core_file_not_found">CORE FILE NOT FOUND</string>
	<string name="core_mod_already_installed">CORE MOD ALREADY INSTALLED</string>
	<string name="deodexed_rom">DEODEXED ROM</string>
	<string name="dialog_architecture_message"
		translatable="false">Your device architecture is not supported by WakeBlock. WakeBlock only supports armeabi-v7a and arm64-v8a devices.
	</string>
	<string name="dialog_architecture_title"
		translatable="false">Unsupported device
	</string>
	<string name="dialog_changelog_do_not_ask_again"
		translatable="false">Do not ask again
	</string>
	<string name="dialog_changelog_message"
		translatable="false">If you have the current core mod installed (or if you are not sure about that because of the latest issues), you will need to manually restore to stock (by manually restoring the backup or by dirty flashing the ROM).\n\nThis only needs to be done this time. From now on the app will be able to automatically update the core mod.
	</string>
	<string name="dialog_changelog_title"
		translatable="false">IMPORTANT [0.2.0]
	</string>
	<string name="dialog_uninstall_message"
		translatable="false">Are you sure you want to uninstall the core mod?\n\nThe device will reboot to complete the uninstallation.
	</string>
	<string name="dialog_uninstall_title"
		translatable="false">Uninstall
	</string>
	<string name="enableDarkMode">Dark Mode</string>
	<string name="error_0">Creating /patcher folder failed</string>
	<string name="error_1">Cleaning previous temporary files failed</string>
	<string name="error_2">Copying files from assets failed</string>
	<string name="error_3">Getting application permissions failed</string>
	<string name="error_4">Getting selinux permissions failed</string>
	<string name="error_5">Extracting failed</string>
	<string name="error_6">Patching smali code failed</string>
	<string name="error_7">Copying WakeBlock classes from assets failed</string>
	<string name="error_8">Unzipping WakeBlock classes failed</string>
	<string name="error_9">Repackaging failed</string>
	<string name="error_10">Zipping services.jar failed</string>
	<string name="error_11">Odexing failed</string>
	<string name="error_12">Creating flashable zip folder failed</string>
	<string name="error_13">Getting system partition name failed</string>
	<string name="error_14">Getting system partition filesystem failed</string>
	<string name="error_15">Copying update-binary from assets and writing updater-script failed</string>
	<string name="error_16">Creating flashable zip failed</string>
	<string name="error_17">Creating backup folder failed</string>
	<string name="error_18">Flash scheduling failed</string>
	<string name="error_19">Copying remove-module.zip file failed</string>
	<string name="extracting_framework">Extracting System Framework…</string>
	<string name="faq_refresh">Updating FAQs…</string>
	<string name="filter">Filter</string>
	<string name="fragment_debug">DEBUG</string>
	<string name="fragment_detected_wakelocks">WAKELOCKS</string>
	<string name="fragment_faq">FAQ</string>
	<string name="fragment_home">HOME</string>
	<string name="fragment_regex">REGEX</string>
	<string name="hide_system_wakelocks">Hide system wakelocks</string>
	<string name="hours">hrs,</string>
	<string name="install_core_mod">INSTALL CORE MOD</string>
	<string name="json_error">Error writing down JSON file!</string>
	<string name="last_acquisition">Last acquisition</string>
	<string name="list_since_boot">List since boot</string>
	<string name="magisk_warning">You chose the Magisk module!\nIf your device bootloops (it\'s HIGHLY UNLIKELY, but we still love your device) simply create a file in your /system (or /system/system for A/B devices) called \"disable.module\" and the module will be automagically removed!\nAfter the removal, you MUST delete the disable.module file by yourself (temporary).</string>
	<string name="magisk_warning_button">OK, gotcha!</string>
	<string name="minutes">min,</string>
	<string name="occurrences_since_boot">Occurrences since boot</string>
	<string name="ok"
		translatable="false">OK
	</string>
	<string name="order">Order</string>
	<string name="order_by_name">Order by name</string>
	<string name="order_by_occurrences">Order by occurrences</string>
	<string name="order_by_times_blocked">Order by times blocked</string>
	<string name="order_by_run_time">Order by run time</string>
	<string name="patching_error">ERROR WHILE PATCHING</string>
	<string name="patching_smali_code">Patching Smali Code…</string>
	<string name="process_wait">Beep Boop. Wait. I need to process stuff. Beep Boop.</string>
	<string name="rbwakelock">Restore WakeLocks</string>
	<string name="repackaging_framework">Repackaging System Framework…</string>
	<string name="root_permissions_denied">Root Permissions are Denied!</string>
	<string name="root_permissions_denied_explanation">We need Root Permissions to be able to do our magic. A small dialog for it will pop shortly. Please grant them, otherwise the app will close itself!!</string>
	<string name="run_time_since_boot">Run time since boot</string>
	<string name="search">Search</string>
	<string name="seconds">s,</string>
	<string name="service_bound">SERVICE BOUND</string>
	<string name="service_unbound">SERVICE UNBOUND</string>
	<string name="show_only_blocked_wakelocks">Show only blocked wakelocks</string>
	<string name="storage_permissions_denied">Storage and Root Permissions</string>
	<string name="storage_permissions_denied_explanation">We need Storage Permission to be able to do our magic. A small dialog for it will pop shortly. Please grant them!</string>
	<string name="storage_permissions_denied_ok">OK, let me do this.</string>
	<string name="this_may_take_several_minutes">this may take several minutes</string>
	<string name="times_blocked_since_boot">Times blocked since boot</string>
	<string name="total_occurrences">Total occurrences</string>
	<string name="total_run_time">Total run time</string>
	<string name="total_times_blocked">Total times blocked</string>
	<string name="unblock">Unblock</string>
	<string name="unblock_wakelock">Unblock WakeLock</string>
	<string name="unsupported_framework">UNSUPPORTED FRAMEWORK</string>
	<string name="wakelock_dialog">Set how often the wakelock is allowed to be executed (in milliseconds).\n\nSet zero or leave empty to never allow it.</string>
</resources>